@@ -1,11 +1,1 @@
-plate.png http://office.microsoft.com/clipart/preview.aspx?AssetID=MCj0434833&Query=plate&Scope=20&CTT=1&Origin=EC790000121033&QueryID=2bFDQFeDE&AssetCol=MCj0412630,MCj0411916,MCj0411938,MPj0422355,MPj0422381,MPj0422380,MPj0422356,MPj0422382,MPj0426645,MPj0411815,MCj0435490,MCj0434833
-
-burger.png http://office.microsoft.com/clipart/preview.aspx?AssetID=MCj0411898&Query=cheese&Scope=20&CTT=1&Origin=EC790000121033&QueryID=NbFDmvb52&AssetCol=MCj0411898,MCj0411618,MPj0422956,MPj0411701,MCj0432251,MCj0432253,MCj0435492,MPj0434002,MPj0434080,MPj0402068,MPj0406646,MPj0406481
-
-heart.png http://office.microsoft.com/clipart/preview.aspx?AssetID=MPj0433140&Query=heart&Scope=20&CTT=1&Origin=EC790000121033&QueryID=2dFD-isqF&AssetCol=MPj0437318,MPj0437327,MPj0437202,MPj0437179,MPj0433217,MPj0433140,MPj0433218,MPj0433232,MPj0433242,MPj0433234,MPj0433209,MPj0433087
-
-eye.png http://office.microsoft.com/clipart/preview.aspx?AssetID=MCj0403893&Query=eyes&Scope=20&CTT=1&Origin=EC790000121033&QueryID=CdFDrp6N_&AssetCol=MMj0283622,MCj0403893,MMj0354409,MMj0236384,MMj0236233,MCj0403997,MCj0280316,MCj0231880,MCj0233782,MCj0215019,MCj0238189,MCj0250552
-
-bike.png http://office.microsoft.com/clipart/preview.aspx?AssetID=MCj0397446&Query=bike&Scope=20&CTT=1&Origin=EC790000121033&QueryID=BeFDzXHSU0&AssetCol=MPj0406885,MPj0402572,MPj0403850,MPj0409618,MCj0397448,MCj0397446,MPj0405280,MPj0405214,MPj0399257,MPj0399203,MPj0405212,MPj0405216
-
-swim.png http://office.microsoft.com/clipart/preview.aspx?AssetID=MCj0157273&Query=swimming&Scope=20&CTT=1&Origin=EC790000121033&QueryID=JeFDRrafb&AssetCol=MCj0251455,MCj0251453,MCj0251741,MCj0238911,MCj0228961,MCj0217592,MCj0212971,MCj0195748,MCj0157383,MCj0157275,MCj0157273,MCj0151549
+food-pyramid http://www.sciencepages.co.uk/keystage3/year8/module13/m13revision.php
