@@ -1,14 +1,14 @@
 #######################################################################################
 ##############                    To Do                                  ##############
 #######################################################################################
-Base diet should be visualized on the plate
-
 Zoom in/out for bar graphs
     alternatively: Readouts by base of bar graph?
 
 Time readouts should be Years:Months, not years in decimal
 
 Performance: consider profiling or changing clock rate
+
+Drag icons should move to the front when selected
 
 #######################################################################################
 ##############                    To Discuss                             ##############
