@@ -1,6 +1,7 @@
 New in 
 Fixed image cropping and transparency
 Fixed: BMI readout is obscured when overlapping the human outline
+Added food pyramid, usable from drag and drop interface
 
 New in 0.00.39
 Moved BMI readout to near the heart
